# SPtraderB

./: .env.example  .gitignore  .vercelignore  CANDLES_MODULE_PROMPT.md  CHART_EXTRACTION_LIST.md  CHART_REFERENCE.md  CLAUDE.md  DEPLOYMENT.md  INSTANT_CHART_LOADING_PLAN.md  MARKET_DATA_INTEGRATION.md  README.md  TRADING_CONTEXT_MIGRATION.md  UNUSED_CODE_ANALYSIS.md  check-errors.js  create_workspace.sh  eslint.config.js  extract-credentials-simple.js  extract-credentials.html  fix-timescale-cloud.sql  fix-timescale-simple.sql  import-csv-to-timescale.sh  index.html  optimize_metadata_query.sql  orchestrator_log_1.md  orchestrator_log_2.md  package-lock.json  package.json  prepare-for-csv.sql  react-closure-bug.md  test-chart.html  test-cloud-connection.sh  test-timescale-ready.sh  test_component_server.sh  test_new_key.sh  test_oanda.sh  test_stored_creds.html  tsconfig.json  update-chart.sh  update_api_key.html  upload-csv-fast.sh  (+2 more)
.zed/: settings.json
api/: .dockerignore  .flyignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  ORCHESTRATOR_FINAL_TEST.md  ORCHESTRATOR_TEST_RESULTS.md  PORTING_COMPLETE.md  README.md  README_TESTING.md  STRATEGY_EXECUTION_COMPLETE.md  fly.toml  ma_crossover_strategy.yaml  test-strategy.yaml
api/src/: main.rs
api/src/database/: mod.rs
api/src/orchestrator/: handlers.rs  mod.rs  python_executor.rs  signal_processor.rs  storage.rs  types.rs
api/src/workspace/: executor.rs  handlers.rs  mod.rs  operations.rs
api/workspace/core/base/: indicator.py
api/workspace/core/data/: __init__.py  csv_to_parquet.py
api/workspace/core/signals/: test_crossover.py
backend/: CLAUDE.md
componentrefactor/: BITCOIN_IMPLEMENTATION_FILES.md  package.json
data-ingestion/: BITCOIN_CASCADE_PATTERN.md  BITCOIN_FOREX_PARITY_SUMMARY.md  CANDLE_REFRESH_AUTOMATION.md  DATABASE_ARCHITECTURE.md  DUKASCOPY_BITCOIN_DATA.md  PULSAR_PIPELINE_SUMMARY.md  README.md  bitcoin_historical_ingester.py  bitcoin_match_forex_structure.sql  check_candle_alignment.py  comprehensive_candle_check.py  dukascopy_bitcoin_ingester.py  dukascopy_ingester.py  fix_bitcoin_precision.sql  load_test_data.sh  requirements.txt  schema.sql  test_bitcoin_forex_parity.py  test_data.py  test_dukascopy_bitcoin.py  test_dukascopy_delay.py  transfer_to_cloud.py
data-ingestion/kraken-ingester/: .gitignore  Cargo.toml  INTEGRATION_GUIDE.md  Makefile  README.md  docker-compose.yml  test_without_pulsar.sh
data-ingestion/kraken-ingester/src/: main.rs
data-ingestion/oanda-ingester/: .env.example  .gitignore  Cargo.toml  Makefile  OANDA_INGESTER_PLAN.md  README.md  TESTING_STATUS.md  docker-compose.yml  extract_credentials.js  get_oanda_creds.html  test_instructions.md
data-ingestion/oanda-ingester/config/: default.toml
data-ingestion/oanda-ingester/src/: config.rs  lib.rs  main.rs
data-ingestion/oanda-ingester/src/oanda/: client.rs  mod.rs  models.rs
data-ingestion/oanda-ingester/src/pulsar/: mod.rs  producer.rs
deprecated/: FILE_MANAGEMENT_UPDATE.md  PHASE1_COMPLETION_SUMMARY.md  RIGHT_CLICK_FILE_MANAGEMENT.md  STATUS_SELECTOR_IMPLEMENTATION.md
depreciated/: AdaptiveChart copy.tsx  AdaptiveChart.tsx.bak  ORCHESTRATOR_COMPLETE_PIPELINE.md  ORCHESTRATOR_COMPONENT_EXECUTION_PLAN.md  ORCHESTRATOR_FLOW_DIAGRAMS.md  (+13 more)
(+5298 files in other folders)
