[package]
name = "kraken-ingester"
version = "0.1.0"
edition = "2021"
authors = ["SPtraderB Team"]
description = "Kraken WebSocket to Pulsar streaming service"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# WebSocket
tungstenite = "0.21"
futures-util = "0.3"

# Pulsar client
pulsar = { version = "6.3", default-features = false, features = ["tokio-runtime", "flate2", "lz4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"
