[package]
name = "oanda-ingester"
version = "0.1.0"
edition = "2021"
authors = ["SPtraderB Team"]
description = "OANDA price streaming service for Apache Pulsar"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP and SSE
reqwest = { version = "0.11", features = ["stream", "json"] }
eventsource-client = "0.12"
futures = "0.3"

# Pulsar client
pulsar = { version = "6.3", default-features = false, features = ["tokio-runtime", "flate2", "lz4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Web server for health checks
axum = "0.7"

# Metrics
prometheus = "0.13"
